gloo/virtualservice.yml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
  ownerReferences: []
status:
  reportedBy: gateway
  state: Accepted
  subresourceStatuses:
    '*v1.Proxy.gloo-system.gateway-proxy':
      reportedBy: gloo
      state: Accepted
spec:
  virtualHost:
    domains:
    - streamstate.org
    routes:
    - matchers:
      # - exact: /all-pets
      - prefix: /build
      options:
        # prefixRewrite: /api/pets
        autoHostRewrite: true
      routeAction:
        single:
          upstream:
            name: argo-events-argowebhook-12000
            namespace: gloo-system
    - matchers:
      # - exact: /all-pets
      - prefix: /ui
      options:
        # prefixRewrite: /api/pets
        autoHostRewrite: true
      routeAction:
        single:
          upstream:
            name: argo-events-argo-server-2746
            namespace: gloo-system
  ssl_config:
    secret_ref:
      name: streamstatecert-vdztr  #streamstatecert # letsencrypt-staging # I think this is right? from ClusterIssuer
      namespace: cert-manager
